<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_about_contact">

    <TextView
        android:id="@+id/supportInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/support_information"
        android:paddingLeft="10dip"
        android:paddingTop="30dip"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/about_number"
        android:layout_below="@id/supportInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dip"
        android:paddingTop="10dip"
        android:textSize="16sp"
        android:text="@string/about_number"/>

    <TextView
        android:id="@+id/email"
        android:layout_below="@id/about_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dip"
        android:paddingTop="10dip"
        android:text="@string/about_email"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/about_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:paddingLeft="40dip"
        android:paddingTop="10dip"
        android:text="@string/about_version"
        android:textSize="16sp" />

    <!--<ImageView
        android:id="@+id/about_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_version"/>-->
</RelativeLayout>